@@ -134,6 +134,13 @@
                                 <argument>-Xmx4g</argument>
                                 <argument>-Xms1g</argument>
                                 <argument>-Xss1m</argument>
+                                <!--
+                                    Restore reflective access to the Aqua L&F so OSXHelper
+                                    can copy menu UI delegates onto Flatlaf. Java 17+ enforces
+                                    strong module encapsulation by default. Mirror this list
+                                    into the jpackage java-options when packaging.
+                                -->
+                                <argument>--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED</argument>
                                 <argument>-javaagent:lib/local/jar-loader/1.0/jar-loader-1.0.jar</argument>
                                 <argument>-classpath</argument>
                                 <classpath/>
